--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,15 @@ spring.jpa.database=MYSQL
 spring.jpa.show-sql=false
 
 ##Hibernate DDL Auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 ##Naming strategy
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 ##Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=37cccaab3e57f5
+spring.mail.password=8da6361c29d7df
